@@ -1,0 +1,9 @@
+# Cut a variable to a factor
+
+cutfac <- function(x, breaks = NULL, q=10) {
+  if(is.null(breaks)) breaks <- unique(quantile(x, 0:q/q))
+  x <- cut(x, breaks, include.lowest = TRUE, right = FALSE)
+  levels(x) <- paste(breaks[-length(breaks)], ifelse(diff(breaks) > 1,
+    c(paste("-", breaks[-c(1, length(breaks))] - 1, sep = ""), "+"), ""), sep = "")
+  return(x)
+}
